--- a/README
+++ b/README
@@ -1,3 +1,12 @@
 NAME: Aryaman Ladha, Akhil Vinta
 EMAIL: ladhaaryaman@ucla.edu, akhil.vinta@gmail.com
 ID: 805299802, 405288527
+
+The files included in the submission are:
+README (This file)
+Makefile (Builds the executable)
+lab3a.c (A single source file)
+ext2_fs.h (a slightly simplified version of the Linux header file that defines the format of the EXT2 file system)
+
+Sources used:
+To understand the working of the EXT2 filesystem, We used the Discussion 1B and 1E slides.
